syntax = "proto3";

package pb;

/////////////////////////// Docs ///////////////////////////
/*
add follower, subscriber
+Categorize fields > favour maintablaity over tags 1 byte saving
+Only when all things implemented go for correct tag ids
+If need to use Box > just after full imple of everythings > or just test if Box works and do not change the wire binary > after launch optimize this
==
Some notes:
  + Reduced: No bloated types > just those we need to now.
  + Seperate things that are diffrent: channles, store, directs,


No Rpc_Account > Rpc_User + Rpc_Profile ,...

next: user relations, shop, product, message log, store, file
next2: message integrations: product, payment, contacts,...
next3: follwing and subcripation in: channels or profiles
gid = unique nano second time;
sid = scoped id; for future - bot platforms
cid = common id - seqentaily increase id for user, channels, groups, shops,..

imut = immutable fields
mut  = mutable fields
*/
// Words: reshared/username/

////////////////////////// Enums //////////////////////////

// todo: chat,group,channels draft: embed in types or in shared spared with one api
message SampleMessage {
  oneof test_oneof {
    string name = 4;
    Invoke sub_message = 9;
    Contact AddContact = 10;
  }
}

enum ProfileLevelEnum {
  LEVEL_NORMAL = 0;
  APP_ADMIN = 1;
  SUSPENDED = 2;
  DELETED_BY_OWNER = 3;
  DELETED_IRAN = 4;
  SUSPENDED_IRAN = 5;
}

/////////////////////////// Common Types ////////////////////
// Invoke is send from user mobile client app.
message Invoke { // imut all
  uint32 namespace = 6; // imut
  uint32 method = 1; // imut
  uint32 user_id = 7; // imut
  uint64 action_id = 2; // imut
  bytes session = 8; // imut
  bytes rpc_data = 4; // imut
}

// InvokeResponse is returned from server in response of Invoke.
message InvokeResponse { // imut all
  uint32 namespace = 6; // imut
  uint32 method = 1; // imut
  uint32 user_id = 7; // imut
  uint64 action_id = 2; // imut
  bytes rpc_data = 4; // imut
}

//==================== User ==================
message Contact {
  fixed64 contact_gid = 1;
  uint32 profile_cid = 2;
  string phone = 4; // +98*
  string first_name = 5; // In device
  string last_name = 6; // In device
  uint32 peer_profile_cid = 12;
  uint32 created_time = 13;
}

// Notes: User should only be returned for user own api calls, it's contain user's private data.
message User {
  // Info 0-10
  uint32 user_cid = 1;
  string phone = 14; // for default profile
  string email = 15; //

  uint32 created_time = 36;
  uint32 version_time = 37;

  // Names - for Default profile build from this > set def_profile title on change
  string first_name = 40;
  string last_name = 41;

  // Access 20
  bool is_deleted = 38;
  bool is_banned = 39;

  // Passwords 30
  string password_hash = 17;
  string password_salt = 18;

  // Profile 40
  Profile def_profile = 1114;

  // Session 50
  repeated Session sessions = 102;

  // Collections

  // Shopping 60
  ShoppingProfile shopping_profile = 111;
  repeated Store stores = 113;

  // Not now 800
  repeated Profile profiles = 110;
}

//==================== Profile ==================
message Profile {
  // Info 0-10
  uint32 profile_cid = 1; // imut - profile_cid
  uint32 user_cid = 2;// imut
  uint32 created_time = 103; // imut

  // Channel
  Channel primary_channel = 100; // imut

  // Save Channel
  SavedChannel saved_channel = 109; // imut

  // Settings
  ProfileSettings setting = 107; // imut

  // Views 100
  Contact contact_info = 111; // When sending profile to others set this if they have this profile in their contacts

  // Demonstration: 800 - collections > not really present > big > fetch with api
  repeated Channel channels = 104; // mut
//  repeated Direct directs = 105;// mut
  repeated Group groups = 106; // mut
  repeated Contact contacts = 108; // mut
}

message ProfileSettings {

}

//==================== Peer Chat ==================
message Chat {//?? or embed
  fixed64 chat_gid = 7; // imut
  uint32 profile1_cid = 1; // imut
  uint32 profile2_cid = 2; // imut

  fixed64 direct1_gid = 3; // imut
  fixed64 direct2_gid = 4; // imut

  // Views
  Contact contact = 49; // ? must use profile
  Profile profile = 149;  // Profile > or Peer Chat ?

  // Messages
  Message last_message = 25; // mut
  Message pinned_message = 26; // mut

  Inboxer inboxer = 700;

  // todo
  //  uint32 peer_profile_cid = 6; // ??
  //  fixed64 peer_last_seen_msg_id = 18; // ??
  //  fixed64 my_last_delivered_seq = 19; // ??
  //  fixed64 my_last_delivered_msg_id = 20; // ??
  //  fixed64 peer_last_delivered_msg_id = 21; // ??
}

message Chat_Dep {//?? or embed
  fixed64 chat_gid = 7; // imut
  uint32 profile1_cid = 1; // imut
  uint32 profile2_cid = 2; // imut

  fixed64 direct1_gid = 3; // imut
  fixed64 direct2_gid = 4; // imut

  // todo
  //  uint32 peer_profile_cid = 6; // ??
  //  fixed64 peer_last_seen_msg_id = 18; // ??
  //  fixed64 my_last_delivered_seq = 19; // ??
  //  fixed64 my_last_delivered_msg_id = 20; // ??
  //  fixed64 peer_last_delivered_msg_id = 21; // ??
}

//==================== Messages ==================
message Message {
  // 1-10 Info
  fixed64 message_gid = 1; // imut
  uint32 by_profile_cid = 2; // imut
  MessageType message_type =107; // imut - mostly
  string text = 7;
  uint32 via_app_id = 12; // imut > Including bots 1: Android app, 2... to 1000 reserved - bots >1000
  uint32 seq = 13; // imut
  uint32 created_time = 18; // imut

  // Edit
  uint32 edited_time = 17; // mut

  // Sync info
  MessageDeliveryStatues delivery_status = 105;
  uint32 delivery_time = 106; // mut-once

  // Visibility
  bool verified = 111; // imut - verified system messages - 2 bytes tag
  bool deleted = 150; // maybe temp with a purge period - 2 bytes

  // Header: Forward/Reply
  Message forward = 16; // forward is always live object from other channels, but not from other chats, groups
  Message reply_to = 50;

  // Channels Settings
  uint32 channel_cid = 1001;
  MessageSetting setting = 102;

  // Channels Extra
  MessageCount counts = 101;

  // Group
  uint32 group_cid = 1002;

  // Media
  repeated FileMsg files = 103;

  // Stores
  Product Product = 110;

  // add location, log, payment, proudcut, forward,
  // reply, pre msg, rich media

  // Views: channel, group, user,
}

enum MessageType {
  TEXT = 0;
  IMAGE = 1;
  VIDEO = 3;
  AUDIO = 5;
  VOICE = 7;
  GIF = 8;
  FILE = 9;
  POLL = 10;
  LOCATION = 11;
  LOG = 12;
  CONTACT = 13;
  WALLET = 15;
  // ??
  PRODUCT = 16;
  FORWARD = 17;
  // Add multi
}

message MessageCount {
  fixed64 message_gid = 1; //???
  uint32 comments_count = 2;
  uint32 likes_count = 3;
  int64 views_count = 4;
  uint32 reshared_count = 5;
  uint32 chat_shared_count = 6;
}

message MessageSetting {
  uint32 disable_comment = 11;

}

enum MessageDeliveryStatues {
  UNKNOWN_MD = 0;
  SENDING = 1;
  SENT = 2; // Sent to server
  DELIVERED = 3;
  SEEN = 4;
  CONSUMED = 5; // listened, download, watched
  FAILED = 6; // blocked, restricted,
  // NOT_ABLE = 7;
}

message MessageLog {
  MessageLogType log_type = 10;
  uint32 by_profile_cid = 2;
  uint32 target_profile_cid = 3;
  Profile target_profile_view = 11;
}

// Just for: groups and peer chats
enum MessageLogType {
  MLT_UNKNOWN= 0;
  USER_SINGED_UP = 1; // Just in chat
  GROUP_CREATED = 2;
  MEMBER_ADDED = 3;
  MEMBER_KICKED = 4;
  MEMBER_LEFT = 5;
  MEMBER_JOINED_BY_LINK = 8;
  ROOM_DELETED = 9;
}

//==================== Channel ==================
message Channel {
  // Info
  uint32 channel_cid = 1; // imut
  uint32 creator_profile_cid = 7; // imut
  bool is_profile_channel = 101; // imut
  uint32 created_time = 36; // imut

  // Visibility
  string user_name = 2; // mut
  string channel_title = 3; // mut - For default channels take if from User first and lastname.
  string about = 16; // mut
  bool is_verified = 6; // mut

  // Sync
  fixed64 sync_time_ms = 21; // mut - version

  // Access
  uint32 is_deleted = 38; // mut
  uint32 is_banned = 39; // mut

  // Settings
  string invite_link_hash = 17; // mut
  ChannelOwnerNotification notification_setting = 90; // for owner
  ChannelPrivacy privacy = 9; // mut

  // Messages
  Message last_message = 25; // mut
  uint32 message_seq = 19; // mut

  // Pin
  Message pinned_message = 26; // mut

  // Avatar
  FileMsg avatar = 100; // mut
  int64 avatar_count = 40; // mut

  Inboxer inboxer = 700;

  // Counts -> followers_count in profile
  uint32 followers_count = 20;
  uint32 posts_count = 22;
  uint32 likes_count = 33;
  uint32 reshared_count = 34;
  MediaCounts counts = 44; // mut
}

enum ChannelPrivacy {
  CHANNEL_UNKNOWN_AB = 0;
  CHANNEL_OPEN = 1;
  CHANNEL_PRIVATE_LINK = 2; // Just for none-default profile channels
  CHANNEL_ACCEPT = 3;
  CHANNEL_CREATOR = 4; // For save
}

message ChannelOwnerNotification { //todo

}

//==================== Store ==================
message ShoppingProfile { //todo

}

message Store {//todo
  uint32 cid = 1;
  string user_name = 2;
  string store_name = 3; // For default channels take if from User.
  string address = 102;
  uint32 creator_user_cid = 7;
  string about = 16;
  uint32 message_seq = 19;
  fixed64 sync_time_ms = 21; // version
  uint32 created_time = 36;

  uint32 is_banned = 39;
  bool is_verified = 6;

  FileMsg avatar = 100;
}

message Product { //todo
  uint32 product_id = 1; // seq
  uint32 category_id = 53;
  string category = 50;
  string brand = 51;
  uint32 fee_rate = 3; //from 10_000 - 5% > 500
  uint32 sales_count = 5;
  uint32 price = 6;

  /*fixed64 gid = 1; // same as message.gid
  fixed64 product_id = 101; // seq
  uint32 by_user_cid = 2;
  uint32 by_channel_cid = 100;
  string rich_text = 8;
  uint32 seq = 13;
  uint32 created_time = 18;*/
}

message ProductPriceInfo {//todo
  uint32 price = 1;
  uint32 discount_price = 6;
  uint32 commission_rate = 3; // from 1000
}

//==================== Inboxer ==================
message Inboxer {
  // Info 1-10
  fixed64 inboxer_gid = 1; // imut  > del
  uint32 profile_cid = 5; // imutt > del

  // Meta info (sync) - mut
  uint32 unseen_count = 12; // mut
  fixed64 sort_time_ms = 45; // mut
  fixed64 sync_time_ms = 104; // mut
  fixed64 my_last_seen_seq = 16; // mut
  fixed64 my_last_seen_msg_id = 17; // mut

  // Pin
  fixed64 pin_time_ms = 10; // mut
}

//==================== Saved ==================
message SavedChannel {//todo
  uint32 channel_cid = 1;
  uint32 creator_profile_cid = 7;
  uint32 message_seq = 19;
  fixed64 sync_time_ms = 21; // version
  uint32 created_time = 36;

  ChannelCounts_Dep counts = 41;
  Message last_message = 25;
}

//==================== Group ==================
message Group {//todo
  // Info
  uint32 group_cid = 1;
  uint32 creator_profile_cid = 7;
  uint32 created_time = 21;

  // Visibility
  string group_title = 3; // or _name
  string user_name = 4; // with "group" suffix > not now > all is private now
  string about = 15;

  // Sync
  uint32 seq = 10;
  fixed64 sort_time = 20;
  fixed64 sync_time = 40;

  // Access
  bool is_deleted = 23;
  bool is_banned = 24;

  // Setting
  bool history_viewable = 8;
  bool is_open_group = 9; // global searchable, view history without joining
  string invite_link_hash = 16;

  // Messages
  Message last_message = 25;
  Message pinned_message = 26;

  // Pin

  // Avatar
  uint32 avatar_count = 14;
  FileMsg avatar = 27;

  // Counts
  uint32 members_count = 17;
  uint32 admins_count = 18;
  uint32 moderator_counts = 19;
  MediaCounts media_counts = 200;

  // Member
  GroupMember group_member = 43; // s_imut
  fixed64 visible_from_msg_gid = 11; // imut
}

message GroupMember {
  // Info
  int64 member_gid = 1;
  int64 group_cid = 2;
  uint32 profile_cid = 3;
  uint32 by_profile_cid = 4;
  uint32 created_time = 6;

  // Notification todo

  // Member Type

  // Permission

}

//==================== Others ==================
message MediaCounts {// Shared amoung chat, groups, channel
  uint32 media_count = 23;
  uint32 photo_count = 24;
  uint32 video_count = 25;
  uint32 gif_count = 26;
  uint32 audio_count = 27;
  uint32 voice_count = 28;
  uint32 file_count = 29;
  uint32 link_count = 30;
  uint32 pined_count = 32;
}

message Media {
//todo file, image, video, audio seperatin
}

message FileMsg {//todo
  fixed64 file_gid = 1;
  uint32 access_hash = 2;
  uint32 file_type = 3;
  uint32 width = 4;
  uint32 height = 5;
  string extension = 6;
  string full_path = 61;
  uint32 user_cid = 7;
  bytes data_thumb = 8;
  bytes data = 9;
}

//==================== Utils ==================

enum DevicePlatform {
  UNKNOWN_PLATFORM = 0;
  ANDROID = 1;
  IOS = 2;
  WINDOWS = 3;
  MAC_OS = 4;
  LINUX = 5;
  Web = 7;
}

message Session {//todo
  fixed64 gid = 1;
  string session_uuid = 2;
  uint64 device_id = 100;
  uint32 user_cid = 3;
  string last_ip_address = 4;
  string user_agent = 8;
  DevicePlatform platform = 9;
  uint32 api_version = 5;
  uint32 active_time = 6;
  uint32 created_time = 7;
}

message Sms {//todo
  fixed64 gid = 1;
  string install_uuid = 3;
  string phone_number = 4;
  string country_code = 32;
  bool for_login = 103;
  string hash_code = 107;
  string confirm_code = 5;
  string gateway_number = 6;
  string text_body = 101;
  uint32 created_time = 100;
  // Below are for easier debugging purpose > stringy
  string gateway_error = 9; // some custom debug info: http header, code, body, ...
  string intent = 14; // like "register" "login" "delete" "marketing" ,...
  string result = 102; // like "confirmed" "unconfirmed" "sending" "gateway_error"
}

//==================== New > move ==================
message Comment {
  uint64 comment_gid = 6; // imut
  uint64 message_gid = 1; // imut
  uint32 profile_cid = 2; // imut
  uint32 created_time = 3; // imut

  string text = 4;  // mut
}

message Follower {
  uint32 channel_cid = 1; // imut
  uint32 profile_cid = 2; // imut
  uint32 created_time = 3; // imut
}

message Subscribe {
  uint32 channel_cid = 1; // imut
  uint32 profile_cid = 2; // imut
  uint32 created_time = 3; // imut
}

message Like {
  uint64 message_gid = 1; // imut
  uint32 profile_cid = 2; // imut
  uint32 created_time = 3; // imut
}

//==================== Views ==================

message NewMessageInput { // C: Common
  fixed64 message_gid = 1; // imut
  uint32 by_profile_cid = 2; // imut
  MessageType message_type = 107; // imut - mostly
  string text = 7;
  uint32 via_app_id = 12; // imut
  uint32 seq = 13; // imut
  uint32 created_time = 18; // imut
  bool verified = 111; // imut - verified system messages - 2 bytes tag

  // Add: headers, media, settings, product?
}


//==================== Deprecated =============
message ChannelCounts_Dep {
  uint32 followers_count = 20;
  //uint32 following_count = 21; // ?? just profile
  uint32 posts_count = 22;
  uint32 media_count = 23;
  uint32 photo_count = 24;
  uint32 video_count = 25;
  uint32 gif_count = 26;
  uint32 audio_count = 27;
  uint32 voice_count = 28;
  uint32 file_count = 29;
  uint32 link_count = 30;
  uint32 board_count = 31;
  uint32 pined_count = 32;
  uint32 likes_count = 33;
  uint32 reshared_count = 34;
}

message GroupCounts_Dep {//todo
  uint32 media_count = 23;
  uint32 photo_count = 24;
  uint32 video_count = 25;
  uint32 gif_count = 26;
  uint32 audio_count = 27;
  uint32 voice_count = 28;
  uint32 file_count = 29;
  uint32 link_count = 30;
  uint32 pined_count = 32;
}



